Outliner - Scene display mode - isn´t showing the count of the View Layers #59125

Closed
opened 2018-12-10 16:17:01 +01:00 by Marcus Papathoma · 5 comments

System Information
Operating system:
Windows 10 x64
Graphics card:
Geforce GTX 1080Ti

Blender Version
Broken: 2.80.0 168a6a4bfc 2018-12-09

Short description of error
The Outliner, under the display mode "Scene", isn´t showing the count of the View Layers. There is the old behavior from Blender 2.79x.

Exact steps for others to reproduce the error
Open the attached file.
outliner_View_Layer_bug.blend
Outliner_View_Layer_bug.JPG

**System Information** Operating system: Windows 10 x64 Graphics card: Geforce GTX 1080Ti **Blender Version** Broken: 2.80.0 168a6a4bfc1 2018-12-09 **Short description of error** The Outliner, under the display mode "Scene", isn´t showing the count of the View Layers. There is the old behavior from Blender 2.79x. **Exact steps for others to reproduce the error** Open the attached file. [outliner_View_Layer_bug.blend](https://archive.blender.org/developer/F5910963/outliner_View_Layer_bug.blend) ![Outliner_View_Layer_bug.JPG](https://archive.blender.org/developer/F5910970/Outliner_View_Layer_bug.JPG)

Added subscriber: @machieb

Added subscriber: @machieb
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Jacques Lucke self-assigned this 2018-12-10 16:57:53 +01:00
Member
[D4060](https://archive.blender.org/developer/D4060)

This issue was referenced by ae5f19e32a

This issue was referenced by ae5f19e32ad334dd4a69af193fc4e0236ac3ca2e
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59125
No description provided.