Fix T59125: Outliner does not show view layer count

Reviewers: brecht

Differential Revision: https://developer.blender.org/D4060